changes name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clockify",
+  "name": "clockify-timetracker",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://PreethiKalyani99.github.io/clockify-timetracker",
