--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clockify",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://PreethiKalyani99.github.io/clockify", 
+  "homepage": "https://PreethiKalyani99.github.io/Clockify", 
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
